# -UE22EC342BC2--Siddharth_Omkar-Roboticarm_to_pick_and_place_items_from_a_conveyorbelt

./: README.md  Screencast from 05-05-2025 03:02:02 PM.webm
install/: local_setup.sh  setup.sh
install/conveyor_description/share/conveyor_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/conveyor_description/share/conveyor_description/cmake/: conveyor_descriptionConfig-version.cmake  conveyor_descriptionConfig.cmake
install/conveyor_description/share/conveyor_description/environment/: ament_prefix_path.dsv  path.dsv
install/conveyor_description/share/conveyor_description/launch/: conveyor_gz.launch.py
install/conveyor_description/share/conveyor_description/urdf/: conveyor.urdf.xacro
install/scara_control/lib/scara_control/: conveyor_control.py  coordination_node  gripper_control.py  ik_solver.py  joint_publisher.py  spawn_objects.py  target_generator.py
install/scara_control/share/scara_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/scara_control/share/scara_control/cmake/: scara_controlConfig-version.cmake  scara_controlConfig.cmake
install/scara_control/share/scara_control/config/: scara_controllers.yaml
install/scara_control/share/scara_control/environment/: ament_prefix_path.dsv  path.dsv
install/scara_control/share/scara_control/launch/: full_system.launch.py  old_full_syst_launch.py  scara_control.launch.py
install/scara_description/share/scara_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/scara_description/share/scara_description/cmake/: scara_descriptionConfig-version.cmake  scara_descriptionConfig.cmake
install/scara_description/share/scara_description/environment/: ament_prefix_path.dsv  path.dsv
install/scara_description/share/scara_description/launch/: spawn_scara.launch.py
install/scara_description/share/scara_description/urdf/: scara1.urdf.xacro
install/scara_gazebo/share/scara_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scara_gazebo/share/scara_gazebo/cmake/: scara_gazeboConfig-version.cmake  scara_gazeboConfig.cmake
install/scara_gazebo/share/scara_gazebo/environment/: ament_prefix_path.dsv  path.dsv
install/scara_gazebo/share/scara_gazebo/launch/: scara_world.launch.py
install/scara_gazebo/share/scara_gazebo/worlds/: scara_world.world
log/: latest_build
src/conveyor_description/: CMakeLists.txt
src/conveyor_description/config/: conveyor_controllers.yaml
src/conveyor_description/launch/: conveyor_gz.launch.py
src/conveyor_description/urdf/: conveyor.urdf.xacro
src/scara_control/: CMakeLists.txt  package.xml
src/scara_control/config/: scara_controllers.yaml
src/scara_control/launch/: full_system.launch.py  old_full_syst_launch.py  scara_control.launch.py
src/scara_control/src/: conveyor_control.py  coordination_node.cpp  gripper_control.py  ik_solver.py  joint_publisher.py  spawn_objects.py  target_generator.py
src/scara_description/: CMakeLists.txt  package.xml
src/scara_description/launch/: spawn_scara.launch.py
src/scara_description/urdf/: scara1.urdf.xacro
src/scara_gazebo/: CMakeLists.txt
src/scara_gazebo/launch/: scara_world.launch.py
src/scara_gazebo/worlds/: scara_world.world
(+8 files in other folders)
